--- a/index.html
+++ b/index.html
@@ -19,16 +19,8 @@
     <img class="milk" src="./photo/milk.png">
     <img class="moli" src="./photo/moli.png">
     <img class="ruan" src="./photo/ruantang.png">
-
-
-    <script class="audio">
-        function play() {
-          var audio = document.getElementById("audio");
-          audio.play();
-        }
-      </script>
   
-      <input type="button" value="PLAY" onclick="play()">
+  <input class="audio" type="button" value="PLAY" onclick="play()">
       <audio id="audio" src="./audio/Animal Crossing.m4a"></audio>
 
 </body>
