--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
     <img class="moli" src="./photo/moli.png">
     <img class="ruan" src="./photo/ruantang.png">
   
+    <img class="letter" src="./photo/ChaLetter.png">
+
+    <img class="letter" src="./photo/moliLetter.png">
+
   <input class="audio" type="button" value="PLAY" onclick="play()">
       <audio id="audio" src="./audio/Animal Crossing.m4a"></audio>
 
