--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
     <img class="ruan" src="./photo/ruantang.png">
   
     <img class="letter" src="./photo/ChaLetter.png">
+    <img class="milkletter" src="./photo/milkletter.png">
+    <img class="jakeletter" src="./photo/jakeletter.png">
+    <img class="moliletter" src="./photo/moliLetter.png">
+    <img class="mlnletter" src="./photo/willow.png">
+    <img class="ruanletter" src="./photo/ruanletter.png" >
 
-    <img class="letter" src="./photo/moliLetter.png">
 
   <input class="audio" type="button" value="PLAY" onclick="play()">
       <audio id="audio" src="./audio/Animal Crossing.m4a"></audio>
